# CI-WITH-SPOTIFY

./: Dockerfile  README.md  main.py  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: container.yaml  python_app.yaml
complete/: check.yaml  container.yaml
notebooks/: spotify_eda.py
tests/: test_utility.py
