[project]
name = "ci-with-spotify"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.4",
    "plotly[express]>=6.4.0",
    "polars>=1.35.2",
    "statsmodels>=0.14.5",
]

[dependency-groups]
dev = [
    "marimo>=0.17.8",
    "pytest>=9.0.1",
]
